--- a/package.json
+++ b/package.json
@@ -11,16 +11,17 @@
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.9",
+    "@types/mongoose": "^5.10.1",
     "@types/node": "^14.14.10",
     "nodemon": "^2.0.6"
   },
   "dependencies": {
     "apollo-server": "^2.19.0",
-    "body-parser": "^1.19.0",
-    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "graphql": "^15.4.0",
+    "graphql-scalars": "^1.5.0",
+    "mongoose": "^5.10.16",
     "ts-node": "^9.0.0",
     "typescript": "^4.1.2"
   }
