Add separate start scripts for dev and production
- create start and start-dev scripts for running in in different enviroments

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon -x ts-node src/main.ts"
+    "start-dev": "nodemon -x ts-node src/main.ts",
+    "start": "ts-node src/main.ts"
   },
   "author": "",
   "license": "ISC",
