--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "graphql-scalars": "^1.5.0",
     "mongoose": "^5.10.16",
     "ts-node": "^9.0.0",
-    "typescript": "^4.1.2"
+    "typescript": "^4.1.2",
+    "winston": "^3.3.3"
   }
 }
